# omnivia

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package.json  pyproject.toml
services/omnivia-memory/: README.md  pyproject.toml
services/omnivia-memory/src/omnivia_memory/: __init__.py
services/omnivia-memory/src/omnivia_memory/app_manifest/: __init__.py  models.py  validation.py
services/omnivia-memory/src/omnivia_memory/app_shell_bridge/: __init__.py  models.py  validation.py
services/omnivia-memory/src/omnivia_memory/component_contract/: __init__.py  models.py  validation.py
services/omnivia-memory/src/omnivia_memory/graph/: repository.py
services/omnivia-memory/src/omnivia_memory/ingestion/: extractors.py  models.py  pipeline.py  repositories.py  scanner.py
services/omnivia-memory/src/omnivia_memory/memory/: models.py  service.py
services/omnivia-memory/src/omnivia_memory/memory_graph/: __init__.py  fixtures.py  models.py  validation.py
services/omnivia-memory/src/omnivia_memory/module_manifest/: __init__.py  models.py  validation.py
services/omnivia-memory/src/omnivia_memory/persistence/: database.py  repositories.py
services/omnivia-memory/src/omnivia_memory/workspace/: __init__.py  models.py  repository.py  service.py
services/omnivia-memory/tests/: test_app_manifest.py  test_app_shell_bridge_contract.py  test_component_contract.py  test_graph_search.py  test_ingestion.py  test_memory_graph_contract.py  test_module_manifest.py  test_public_api.py  test_watcher.py  test_workspace.py
services/omnivia-memory/tests/fixtures/: sample.docx
(+25 files in other folders)
