[project]
name = "omnivia-core"
version = "0.1.0"
description = "Public OmniVia core primitives for local-first knowledge modeling, persistence, graph links, ingestion, provenance, workspace modeling, and basic search."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["services"]
